--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ ehthumbs.db
 
 # Folder config file
 Desktop.ini
-
+# exclude  folders
+node_modules/
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
